--- a/business/index.html
+++ b/business/index.html
@@ -9,4 +9,5 @@
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
+  <script src="http://at.alicdn.com/t/font_617748_of5zm3g78ciyhkt9.js"></script>
 </html>
